fix second commit

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -2,35 +2,9 @@
     <head>
         <meta charset='UTF-8' />
         <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-        <title>Re:Name - Rename your files</title>
-        <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-        <link rel='stylesheet' href='css/normalize.css' />
-        <link rel='stylesheet' href='css/main.css' />
-        <link rel='shortcut icon' href='/images/icon.png' type='image/x-icon' />
-    </head>
-    <body>
-
-        <script
-            src='https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js'
-        ></script>
-        <script src='/js/main.js'></script>
-
-        {{! Configurando Sortable.js  }}
-        <script>
-            const list = document.getElementById('list'); Sortable.create(list);
-        </script>
-
-    </body>
-</html>
-
-
-<html lang='en'>
-    <head>
-        <meta charset='UTF-8' />
-        <meta name='viewport' content='width=device-width, initial-scale=1.0' />
         <title>Distecnomundo - línea blanca</title>
         <!-- Custom CSS -->
-        <link rel='stylesheet' href='main.css' />
+        <link rel='stylesheet' href='./css/main.css' />
         <!-- Google fonts -->
         <link rel='preconnect' href='https://fonts.googleapis.com' />
         <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
