--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -4,35 +4,42 @@
     box-sizing: border-box;
     color: #fff;
     font-family: 'Nunito Sans', sans-serif;
+    font-size: 17px;
 }
 
 body {
     width: 100vw;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
 }
 
 .bg {
     width: 100%;
     height: 100%;
     position: absolute;
+    object-fit: cover;
     filter: brightness(70%);
+}
+
+.container {
+    padding: 0 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
 }
 
 nav {
     position: relative;
-    padding: 25px;
+    padding: 25px 0;
     width: 100%;
     display: flex;
     justify-content: flex-start;
-
 }
 
 .logo {
-    height: 65px;
+    height: 3.0625rem;
 }
 
 section {
@@ -50,9 +57,8 @@ section {
 }
 
 .icon-info {
-    width: 130px;
+    width: 8.125rem;
     margin-bottom: 30px;
-    fill: #fff;
 }
 
 h1 {
@@ -77,7 +83,7 @@ footer div {
 }
 
 footer a {
-    transition: all .25s;
+    transition: all 0.25s;
 }
 
 footer a:hover {
@@ -86,4 +92,4 @@ footer a:hover {
 
 footer p {
     padding: 20px;
-}
+} /* */
