--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,6 +3,7 @@
         <meta charset='UTF-8' />
         <meta name='viewport' content='width=device-width, initial-scale=1.0' />
         <title>Distecnomundo - línea blanca</title>
+        <link rel='shortcut icon' href='./imgs/icon.png' type='image/x-icon' />
         <!-- Custom CSS -->
         <link rel='stylesheet' href='./css/main.css' />
         <!-- Google fonts -->
